# gnome-backgrounds-macos

./: .gitignore  .gitmodules  APKBUILD  COPYING  COPYING.md  README.md  download-backgrounds.sh  gnome-backgrounds-macos.doap  meson.build
backgrounds/: bigsur-color.xml.in  bigsur.xml.in  catalina.xml.in  images.sha256  meson.build  mojave.xml.in  monterey.xml.in
